made changes to fix images on mobile hopefully

--- a/css/style.css
+++ b/css/style.css
@@ -115,3 +115,9 @@ body{
     padding-left: -30px; /* Adjust this value; try a negative value */
 }
 .flexslider .slides > li { padding-left: 0; }
+img{
+	height: 30px;
+	margin: 10px auto 10px auto;
+	display: block;
+}
+
